menu (2.1.20) unstable; urgency=low

  * The "unreleased" release

 -- Bill Allombert <ballombe@debian.org>  Sat,  6 Nov 2004 20:45:07 +0100

menu (2.1.19) unstable; urgency=low

  * The "Debian translators rule!" release
  * Update Finnish menu section translations, fixing a serious translation
    error noticed by Mika Wahlroos. Closes: #276122.
  * Update Brazillian menu section translation. Thanks André Luís Lopes.
  * Update Russian menu messages translation. Thanks Yuri Kozlov.
    Closes: #268638.
  * Fix Norwegian Nynorsk menu message translation. Thanks Håvard Korsvoll.
  * Update Spanish menu messages translation. Thanks Javier Fernandez-Sanguino
    Peña.
  * Update Chinese menu messages translation. Thanks Carlos Z.F. Liu.
  * Add German menu messages translation. Thanks Tobias Toedter.
  * Add Portuguese menu message and menu section translation. Thanks
    António Amorim.

 -- Bill Allombert <ballombe@debian.org>  Mon,  1 Nov 2004 17:15:40 +0100

menu (2.1.18) unstable; urgency=low

  * The "Sarge is still warm" release 
  * Update Japanese menu message translation. Thanks Goto Masanori.
  * Update Finnish menu message translation. Thanks Tommi Vainikainen.
  * Update Brazillian menu message translation. Thanks André Luís Lopes.
  * Update Dutch menu message translation. Thanks Tim Dijkstra. 
    Closes: #274355.
  * Update Norwegian Nynorsk menu message translation. Thanks Håvard Korsvoll.
  * Add file README.translations to document the way menu sections are
    translated.
  * Document it is possible to add entries for menu sections. 
  * Morten Brix Pedersen: 
    - Allow character classes in regular expressions. This fix the parsing
      of translate_menus. Closes: #271659. Thanks, Paul Seelig.
    - Only use letters and digits as possible shortcut keys. Closes: #259349

 -- Bill Allombert <ballombe@debian.org>  Mon,  4 Oct 2004 10:59:02 +0200

menu (2.1.17) unstable; urgency=medium

  * The "yellow pig" release